feat: create makefile & fix swagger
